# mgserver-next

./: .gitignore  CMakeLists.txt  proxy_clean_windows.bat  proxy_gen_windows.bat  setenvironment.bat
src/: CMakeLists.txt  CMakeSettings.json  Server.sln  Tests.sln
src/Common/: CMakeLists.txt
src/Common/Core/: CMakeLists.txt  Foundation.h
src/Common/Foundation/: CMakeLists.txt  Foundation.vcxproj  Foundation.vcxproj.filters
src/Common/Geometry/: CMakeLists.txt  Geometry.vcxproj  Geometry.vcxproj.filters  GeometrySimplificationAlgorithmType.h  GeometrySimplifier.cpp  GeometrySimplifier.h
src/Common/MdfModel/: CMakeLists.txt  MdfModel.vcxproj  MdfModel.vcxproj.filters  ProfileRenderLabelsResult.cpp  ProfileRenderLabelsResult.h  ProfileRenderLayerResult.cpp  ProfileRenderLayerResult.h  ProfileRenderLayersResult.cpp  ProfileRenderLayersResult.h  ProfileRenderLayersResultBase.cpp  ProfileRenderLayersResultBase.h  ProfileRenderMapResult.cpp  ProfileRenderMapResult.h  ProfileRenderSelectionResult.cpp  ProfileRenderSelectionResult.h  ProfileRenderWatermarkResult.cpp  ProfileRenderWatermarkResult.h  ProfileRenderWatermarksResult.cpp  ProfileRenderWatermarksResult.h  ProfileResult.cpp  ProfileResult.h  ScaleRange.cpp  ScaleRange.h  TileSetDefinition.cpp  TileSetDefinition.h  TileSetSource.cpp  TileSetSource.h  TileStoreParameters.cpp  TileStoreParameters.h  URLData.cpp  URLData.h
src/Common/MdfParser/: IOProfileRenderLabelsResult.cpp  IOProfileRenderLabelsResult.h  IOProfileRenderLayerResult.cpp  IOProfileRenderLayerResult.h  IOProfileRenderLayersResult.cpp  IOProfileRenderLayersResult.h  IOProfileRenderMapResult.cpp  IOProfileRenderMapResult.h  IOProfileRenderSelectionResult.cpp  IOProfileRenderSelectionResult.h  IOProfileRenderWatermarkResult.cpp  IOProfileRenderWatermarkResult.h  IOProfileRenderWatermarksResult.cpp  IOProfileRenderWatermarksResult.h  IOProfileResult.cpp  IOProfileResult.h  IOScaleRange.cpp  IOScaleRange.h  IOTileSetDefinition.cpp  IOTileSetDefinition.h  IOTileSetSource.cpp  IOTileSetSource.h  IOTileStoreParameters.cpp  IOTileStoreParameters.h  IOURLData.cpp  IOURLData.h  MdfParser.vcxproj  MdfParser.vcxproj.filters
src/Common/Renderers/: CMakeLists.txt  KmlContent.cpp  KmlIconStyle.cpp  KmlIconStyle.h  MapQuantization.cpp  MapQuantization.h  Renderers.vcxproj  Renderers.vcxproj.filters
src/Common/Stylization/: CMakeLists.txt  ExpressionFunctionArgb.cpp  ExpressionFunctionDecap.cpp  ExpressionFunctionFeatureClass.cpp  ExpressionFunctionFeatureId.cpp  ExpressionFunctionFeatureSource.cpp  ExpressionFunctionFeatureSource.h  ExpressionFunctionHtmlColor.cpp  ExpressionFunctionHtmlColor.h  ExpressionFunctionIf.cpp  ExpressionFunctionLayerDefinition.cpp  ExpressionFunctionLayerDefinition.h  ExpressionFunctionLayerId.cpp  ExpressionFunctionLookup.cpp  ExpressionFunctionMapCenterX.cpp  ExpressionFunctionMapCenterX.h  ExpressionFunctionMapCenterY.cpp  ExpressionFunctionMapCenterY.h  ExpressionFunctionMapName.cpp  ExpressionFunctionMapScale.cpp  ExpressionFunctionMapScale.h  ExpressionFunctionRange.cpp  ExpressionFunctionSession.cpp  ExpressionFunctionUrlEncode.cpp  GeometryAdapter.h  GridData.h  GridTheme.h  KeyEncode.cpp  Stylization.h  Stylization.vcxproj  Stylization.vcxproj.filters  StylizationUtil.cpp  Stylizer.h  stdafx.h
src/Common/gRpc/csharp/: OSGeo.MapGuide.csproj  README.txt
src/Common/gRpc/csharp/Custom/: Partials.cs
src/Common/gRpc/cxx/: README.txt
src/Common/gRpc/php/: README.txt
src/Common/proto/: FeatureService.proto  LayerDefinition.proto  RenderingService.proto  ResourceService.proto  ServiceCommon.proto
src/Server/: CMakeLists.txt  Server.sln
src/Server/OSGeo.MapGuide.Services/: ErrorUtil.cs  FdoUtils.cs  MgServerFeatureService.cs  MgServerRenderingService.cs  MgServerResourceService.cs  OSGeo.MapGuide.Services.csproj  ResourcePathResolver.cs  ServerFeatureService.cs  ServerRenderingService.cs  ServerResourceService.cs  packages.config
src/Server/OSGeo.MapGuide.Services/Properties/: AssemblyInfo.cs
src/Server/ServerMain/: CMakeLists.txt  main.cpp
src/Server/Services/: CMakeLists.txt  DllExport.h  ServerFeatureService.cpp  ServerFeatureService.h  ServerRenderingService.cpp  ServerRenderingService.h  ServerResourceService.cpp  ServerResourceService.h  ServicesDllExport.h  gRpc.cpp
src/Server/Services/gRpc/: README.txt
src/Server/mgserver.console/: Program.cs  mgserver.console.csproj  packages.config
src/Server/mgserver.console/Properties/: AssemblyInfo.cs
src/Test/DotNetConsoleTest/: DotNetConsoleTest.csproj  Program.cs
src/Test/DotNetConsoleTest/Properties/: AssemblyInfo.cs
src/gRpc/: README.txt
src/gRpc/csharp/Custom/: Partials.cs
src/gRpc/cxx/: CMakeLists.txt  CMakeSettings.json  MdfModel.h  MessagesDllExport.h  UnicodeString.cpp  UnicodeString.h
src/gRpc/java/: README.txt
src/proto/: Common.proto  Fdo.proto  FeatureService.proto  FeatureService_Messages.proto  FeatureSource.proto  LayerDefinition.proto  MapDefinition.proto  RenderingService.proto  RenderingService_Messages.proto  ResourceService.proto  ResourceService_Messages.proto  ServiceCommon.proto  SymbolDefinition.proto  WatermarkDefinition.proto
src/proto/MdfModel/: FeatureSource.proto  LayerDefinition.proto  MapDefinition.proto  MdfCommon.proto  SymbolDefinition.proto  WatermarkDefinition.proto
